# bc-forge

./: README.md
.github/workflows/: ci.yml
apps/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  jsx-augment.d.ts  main.tsx
apps/frontend/src/__types__/: react.d.ts  sdk.d.ts
apps/frontend/src/components/: EmptyState.tsx  ErrorState.tsx  Layout.tsx  LoadingSkeleton.tsx  VestingScheduleCard.tsx
apps/frontend/src/pages/: VestingScheduleView.tsx
contracts/admin/: Cargo.toml
contracts/admin/src/: lib.rs
contracts/lifecycle/: Cargo.toml
contracts/lifecycle/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs  proptest.rs  reentrancy_guard.rs  test.rs
contracts/token/test_snapshots/test/: test_initialize_emits_correct_event.1.json
contracts/ttl/: Cargo.toml
contracts/vesting/src/: lib.rs  test.rs
contracts/wrapper/src/: lib.rs  test.rs
indexer/src/: indexer.ts
react/: jest.config.js  package-lock.json  package.json
react/src/: context.tsx  hooks.ts  index.ts
react/src/components/: Alert.test.tsx  Alert.tsx  Badge.test.tsx  Badge.tsx  COMPONENTS.md  index.ts
sdk/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
sdk/src/: client.test.ts  client.ts  events.ts  index.ts  mockClient.test.ts  mockClient.ts  utils.ts  vestingClient.ts  wrapperClient.ts
